--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #007bff;
+    background-color: #72a3d8;
     color: white;
     padding: 1em 0;
     text-align: center;
